<resources>
    <string name="app_name">FarmaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FarmaApp">Farma App</string>
    <string name="FarmaTips">Farma Tips</string>
    <string name="RRSS">Redes Sociales</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="buscadorFarm">Buscador de Farmacias</string>
    <string name="ajustes1">Ajustes</string>
    <string name="home">Home</string>
    <string name="bienvenida">Bienvenido a Farma App</string>
    <string name="pregunta">¿Que desea hacer?</string>
    <string name="buscar_farmacias">Buscar Farmacias</string>
    <string name="buescar_medicamento">Buescar Medicamento</string>
    <string name="buscadorMed">Buscador de Medicamentos</string>
    <string name="ajustes">Ajustes</string>
    <string name="title_activity_mapa">Map</string>
    <string name="agregar_medicamento">Agregar Medicamento</string>
    <string name="id">ID</string>
    <string name="formato">Formato</string>
    <string name="valor">Valor</string>
    <string name="agregar">Agregar</string>
    <string name="miligramos">Miligramos</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
</resources>