<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFarmaApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_farmacia"
            android:text="@string/FarmaApp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFarmaTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_tips"
            android:text="@string/FarmaTips" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icono_rs"
            android:text="@string/RRSS" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="548dp"
        android:layout_height="786dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/contenedorFragment"
            android:layout_width="527dp"
            android:layout_height="730dp">

        </FrameLayout>
    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>